<resources>
    <string name="app_name">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_earning">Earning</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_setting">Setting</string>

    <string name="var_id">Id:</string>
    <string name="val_id">1234</string>
    <string name="var_from">From:</string>
    <string name="val_from">RUPP</string>
    <string name="var_to">To:</string>
    <string name="val_to">PPIU</string>
    <string name="var_total">Total Earning</string>
    <string name="val_total">$10</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
